--- a/trip-offer.html
+++ b/trip-offer.html
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="text-decoration-none">
+                        <a href="wallet.html" class="text-decoration-none">
                             <div class="row mt-4">
                                 <div class="col-12">
                                     <h6 class=" text-dash text-uppercase ml-3"><span class="box mr-2"><i
