--- a/help.html
+++ b/help.html
@@ -18,7 +18,7 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-2 border-dash" id="col1" style="transition: ease-in 0.7s;">
+                <div class="col-md-2 shadow-sm " id="col1" style="transition: ease-in 0.7s; height: 100vh;">
                     <div class="sidebar">
                         <img src="images/logo.png" class="img-fluid mt-3 ml-md-2" width="60">
                         <a href="#" class="text-decoration-none">
@@ -29,7 +29,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="text-decoration-none">
+                        <a href="request-trip.html" class="text-decoration-none">
                             <div class="row mt-4">
                                 <div class="col-12">
                                     <h6 class=" text-dash text-uppercase ml-3"><span class="box2 mr-2"><i
