--- a/request-trip.html
+++ b/request-trip.html
@@ -11,14 +11,14 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <title>Settings</title>
+    <title>Request a trip</title>
 </head>
 
 <body>
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-2  shadow-sm " id="col1" style="transition: ease-in 0.7s; height: 100vh;">
+                <div class="col-md-2 shadow-sm" id="col1" style="transition: ease-in 0.7s;">
                     <div class="sidebar">
                         <img src="images/logo.png" class="img-fluid mt-3 ml-md-2" width="60">
                         <a href="#" class="text-decoration-none">
@@ -32,8 +32,9 @@
                         <a href="request-trip.html" class="text-decoration-none">
                             <div class="row mt-4">
                                 <div class="col-12">
-                                    <h6 class=" text-dash text-uppercase ml-3"><span class="box2 mr-2"><i
-                                                class="fas fa-map-marker-alt"></i></span> Request a trip
+                                    <h6 class=" text-dash active-dash text-uppercase ml-3"><span
+                                            class="box2 bg-nav mr-2"><i class="fas fa-map-marker-alt"></i></span>
+                                        Request a trip
                                     </h6>
                                 </div>
                             </div>
@@ -58,7 +59,7 @@
                         <a href="help.html" class="text-decoration-none">
                             <div class="row mt-4">
                                 <div class="col-12">
-                                    <h6 class=" text-dash text-uppercase ml-3"><span class="box  mr-2"><i
+                                    <h6 class=" text-dash text-uppercase ml-3"><span class="box mr-2"><i
                                                 class="fas fa-info-circle"></i></span> Help
                                     </h6>
                                 </div>
@@ -67,7 +68,7 @@
                         <a href="settings.html" class="text-decoration-none">
                             <div class="row mt-4">
                                 <div class="col-12">
-                                    <h6 class=" text-dash active-dash  text-uppercase ml-3"><span class="box bg-nav mr-2"><i
+                                    <h6 class=" text-dash text-uppercase ml-3"><span class="box mr-2"><i
                                                 class="fas fa-cog"></i></span> Settings</h6>
                                 </div>
                             </div>
@@ -98,82 +99,100 @@
                             </ul>
                         </div>
                     </nav>
+                    <img src="images/request a trip background.png" class="img-fluid w-100">
                     <div class="container">
-                        <div class="row mt-5">
+                    <div class="row mt-5 justify-content-center">
+                        <div class="col-md-10">
+                            <h5 class="text-uppercase font-weight-bold">Plan Your Trip</h5>
+                        <div class="row">
                             <div class="col-md-12">
-                                <h5 class="text-uppercase font-weight-bold">Account</h5>
+                                <form>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group mb-1">
+                                                <label for="exampleInputEmail1" class="lable-size text-uppercase">Enter trip Name</label>
+                                                <input type="text" class="form-control input-style shadow-sm" id="exampleInputEmail1"
+                                                    aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                    </div>
+                                   
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group mb-1">
+                                                <label for="exampleInputEmail1" class="lable-size text-uppercase">Enter trip Name</label>
+                                                <input type="text" class="form-control input-style shadow-sm" id="exampleInputEmail1"
+                                                    aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group mb-1">
+                                                <label for="exampleInputEmail1" class="lable-size text-uppercase">Enter trip Name</label>
+                                                <input type="text" class="form-control input-style shadow-sm" id="exampleInputEmail1"
+                                                    aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group mb-1">
+                                                <label for="exampleInputEmail1" class="lable-size text-uppercase">Enter trip Name</label>
+                                                <input type="text" class="form-control input-style shadow-sm" id="exampleInputEmail1"
+                                                    aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group mb-1">
+                                                <label for="exampleInputEmail1" class="lable-size text-uppercase">Enter trip Name</label>
+                                                <input type="text" class="form-control input-style shadow-sm" id="exampleInputEmail1"
+                                                    aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group mb-1">
+                                                <label for="exampleInputEmail1" class="lable-size text-uppercase">Enter trip Name</label>
+                                                <input type="text" class="form-control input-style shadow-sm" id="exampleInputEmail1"
+                                                    aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group mb-1">
+                                                <label for="exampleInputEmail1" class="lable-size text-uppercase">Enter trip Name</label>
+                                                <input type="text" class="form-control input-style shadow-sm" id="exampleInputEmail1"
+                                                    aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group mb-1">
+                                                <label for="exampleInputEmail1" class="lable-size text-uppercase">Enter trip Name</label>
+                                                <input type="text" class="form-control input-style shadow-sm" id="exampleInputEmail1"
+                                                    aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group mb-1">
+                                                <label for="exampleInputEmail1" class="lable-size text-uppercase">Enter trip Name</label>
+                                                <textarea class="form-control shadow-sm" id="exampleFormControlTextarea1" rows="3"></textarea>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row mt-4">
+                                        <div class="col-md-12">
+                                            <img src="images/Place you want to visit.png" class="img-fluid w-100">
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
-                        <div class="row mt-4">
-                            <div class="col-md-4">
-                                <div class="card shadow-sm w-resp height-card">
-                                    <div class="card-body">
-                                        <div class="text-center">
-                                            <img src="images/personal info.png" class="img-fluid mt-2" width="45">
-                                            <h6 class="mt-2">Personal Information</h6>
-                                            <p class="text-muted heading2 ">Tell us about yourself  so we can reach you</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 mt-4 mt-md-0">
-                                <div class="card shadow-sm w-resp height-card" >
-                                    <div class="card-body">
-                                        <div class="text-center">
-                                            <img src="images/login_.png" class="img-fluid mt-2" width="28">
-                                            <h6 class="mt-2">Login and Security</h6>
-                                            <p class="text-muted heading2 pb-2">Keep update your login information to keep your account secure</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4  mt-4 mt-md-0">
-                                <div class="card shadow-sm w-resp height-card">
-                                    <div class="card-body">
-                                        <div class="text-center">
-                                            <img src="images/privacy.png" class="img-fluid mt-2" width="32">
-                                            <h6 class="mt-2">Privacy and sharing</h6>
-                                            <p class="text-muted heading2 ">Control what you share. <br> & who sees it</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
-                        <div class="row mt-4">
-                            <div class="col-md-4">
-                                <div class="card shadow-sm w-resp height-card">
-                                    <div class="card-body">
-                                        <div class="text-center">
-                                            <img src="images/payment_.png" class="img-fluid mt-2" width="45">
-                                            <h6 class="mt-2">Payment & Payout</h6>
-                                            <p class="text-muted heading2 ">Check your payment & payouts</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 mt-4 mt-md-0">
-                                <div class="card shadow-sm w-resp height-card" >
-                                    <div class="card-body">
-                                        <div class="text-center">
-                                            <img src="images/gobal.png" class="img-fluid mt-2" width="40">
-                                            <h6 class="mt-2">Global</h6>
-                                            <p class="text-muted heading2 pb-2">Change your global settings</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4  mt-4 mt-md-0">
-                                <div class="card shadow-sm w-resp height-card">
-                                    <div class="card-body">
-                                        <div class="text-center">
-                                            <img src="images/notificatio.png" class="img-fluid mt-2" width="40">
-                                            <h6 class="mt-2">Notifications</h6>
-                                            <p class="text-muted heading2 ">Set your notification preferences</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    </div>
                     </div>
                 </div>
             </div>
