--- a/help.html
+++ b/help.html
@@ -38,7 +38,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="trip-offer.html" class="text-decoration-none">
+                        <a href="my-trip.html" class="text-decoration-none">
                             <div class="row mt-4">
                                 <div class="col-12">
                                     <h6 class=" text-dash  text-uppercase ml-3"><span class="box2 mr-2"><i
@@ -74,7 +74,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-10 p-0" id="col2">
+                <div class="col-md col-12 p-0" id="col2">
                     <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-nav">
                         <a class="navbar-brand" href="#" onclick=" hideElementDash()"><img src="images/menu.png"
                                 width="27"></a>
@@ -133,20 +133,17 @@
             </div>
         </div>
     </section>
-    <!-- <script>
+    <script>
         function hideElementDash() {
             var x = document.getElementById("col1");
-            var y = document.getElementById("col2");
 
             if (x.style.display === "none") {
                 x.style.display = "block";
             } else {
                 x.style.display = "none";
             }
-            document.getElementById("col2").classList.add("col-md-12");
-
         }
-    </script> -->
+    </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
