--- a/help.html
+++ b/help.html
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                         <div class="row mt-4">
-                            <div class="col-md-3">
+                            <!-- <div class="col-md-3">
                                 <div class="card shadow-sm">
                                     <div class="card-body">
                                         <div class="text-center">
@@ -121,6 +121,28 @@
                                     <div class="card-body">
                                         <div class="text-center">
                                             <img src="images/login_.png" class="img-fluid" width="28">
+                                            <h6 class="mt-2">Report a Problem</h6>
+                                            <p class="text-muted heading2 ">Keep update your login information</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div> -->
+                            <div class="col-md-4">
+                                <div class="card shadow-sm w-resp height-card">
+                                    <div class="card-body">
+                                        <div class="text-center">
+                                            <img src="images/personal info.png" class="img-fluid mt-2" width="45">
+                                            <h6 class="mt-2">Contact us</h6>
+                                            <p class="text-muted heading2 ">Contact us and tell us your views</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card shadow-sm w-resp height-card">
+                                    <div class="card-body">
+                                        <div class="text-center">
+                                            <img src="images/login_.png" class="img-fluid mt-2" width="28">
                                             <h6 class="mt-2">Report a Problem</h6>
                                             <p class="text-muted heading2 ">Keep update your login information</p>
                                         </div>
