--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <div class="container">          
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link link-style ml-3" href="#"> <img src="images/user.png"> Login </a>
+                <a class="nav-link link-style ml-3" href="dashboard.html"> <img src="images/user.png"> Login </a>
               </li>
               <li class="nav-item" >
-                <a class="nav-link link-style ml-3" href="#"><img src="images/register.png" width="15"> Register</a>
+                <a class="nav-link link-style ml-3" href="dashboard.html"><img src="images/register.png" width="15"> Register</a>
               </li>
             </ul>
         </div>
