--- a/my-trip.html
+++ b/my-trip.html
@@ -21,7 +21,7 @@
                 <div class="col-md-2 shadow-sm" id="col1" style="transition: display ease-in-out 0.7s;">
                     <div class="sidebar">
                         <img src="images/logo.png" class="img-fluid mt-3 ml-md-2" width="60">
-                        <a href="#" class="text-decoration-none">
+                        <a href="dashboard.html" class="text-decoration-none">
                             <div class="row">
                                 <div class="col-12">
                                     <h6 class="mt-5 pt-5 text-dash text-uppercase ml-3"><span class="box mr-2"><i
@@ -414,7 +414,7 @@
                                                                         expedita autem iusto.</p>
                                                                 </div>
                                                                 <div class="col-md-2">
-                                                                    <button class="btn btn-payouts">View detial</button>
+                                                                    <a class="btn btn-payouts" href="present-detail.html">View detial</a>
                                                                 </div>
                                                             </div>
                                                             <div class="row">
@@ -481,7 +481,7 @@
                                                                         expedita autem iusto.</p>
                                                                 </div>
                                                                 <div class="col-md-2">
-                                                                    <button class="btn btn-payouts">View detial</button>
+                                                                    <a class="btn btn-payouts" href="present-detail.html">View detial</a>
                                                                 </div>
                                                             </div>
                                                             <div class="row">
@@ -548,7 +548,7 @@
                                                                         expedita autem iusto.</p>
                                                                 </div>
                                                                 <div class="col-md-2">
-                                                                    <button class="btn btn-payouts">View detial</button>
+                                                                    <a class="btn btn-payouts" href="present-detail.html">View detial</a>
                                                                 </div>
                                                             </div>
                                                             <div class="row">
@@ -615,7 +615,7 @@
                                                                         expedita autem iusto.</p>
                                                                 </div>
                                                                 <div class="col-md-2">
-                                                                    <button class="btn btn-payouts">View detial</button>
+                                                                    <a class="btn btn-payouts" href="present-detail.html">View detial</a>
                                                                 </div>
                                                             </div>
                                                             <div class="row">
