--- a/request-trip.html
+++ b/request-trip.html
@@ -21,7 +21,7 @@
                 <div class="col-md-2 shadow-sm" id="col1" style="transition: ease-in 0.7s;">
                     <div class="sidebar">
                         <img src="images/logo.png" class="img-fluid mt-3 ml-md-2" width="60">
-                        <a href="#" class="text-decoration-none">
+                        <a href="dashboard.html" class="text-decoration-none">
                             <div class="row">
                                 <div class="col-12">
                                     <h6 class="mt-5 pt-5 text-dash text-uppercase ml-3"><span class="box mr-2"><i
